--- a/templates/main.html
+++ b/templates/main.html
@@ -16,10 +16,14 @@
     <title>Farmec Ireland </title>
 </head>
 
+{% include 'navbar.html' %}
+
 <body>
     {% block content %}
 
     {% endblock content %}
 </body>
+
+{% include 'footer.html' %}
 
 </html>
